fix: through add `overflow-wrap: break-word` to a tag

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -25,6 +25,7 @@ a {
   font-weight: 300;
   color: $link-color;
   text-decoration: none;
+  overflow-wrap: break-word;
   &:focus,
   &:hover {
     text-decoration: none;
